[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
parking_lot = "0.12.0"
tracing = "0.1.34"

# Substrate
sc-client-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-state-machine = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }

# Polkadot
polkadot-node-primitives = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
polkadot-parachain = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
polkadot-primitives = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }

# Cumulus
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]
portpicker = "0.1.1"
tokio = { version = "1.18.2", features = ["macros"] }
url = "2.2.2"

# Substrate
sc-cli = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-keyring = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-keystore = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
substrate-test-utils = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }

# Polkadot
polkadot-client = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
polkadot-service = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
polkadot-test-client = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-inprocess-interface = { path = "../relay-chain-inprocess-interface" }
cumulus-test-service = { path = "../../test/service" }
