[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
polkadot-overseer = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
polkadot-service = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-state-machine = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }

futures = "0.3.21"
parking_lot = "0.12.0"
derive_more = "0.99.2"
async-trait = "0.1.53"
thiserror = "1.0.31"
jsonrpsee-core = "0.13.1"
parity-scale-codec = "3.1.2"
