[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-rpc-interface"
version = "0.1.0"
edition = "2021"


[dependencies]
polkadot-service = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }

cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-state-machine = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sp-storage = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }
sc-rpc-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }

futures = "0.3.21"
futures-timer = "3.0.2"
parity-scale-codec = "3.1.2"
parking_lot = "0.12.0"
jsonrpsee = { version = "0.13.1", features = ["ws-client"] }
tracing = "0.1.34"
async-trait = "0.1.53"
url = "2.2.2"
backoff = { version = "0.4.0", features = ["tokio"] }
