[package]
name = "cumulus-primitives-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }

# Substrate
frame-support = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-std = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-trie = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }

# Polkadot
polkadot-core-primitives = { git = "ssh://git@github.com/futureversecom/relay-chain", default-features = false, branch = "release/0.0.1-rc0" }
polkadot-parachain = { git = "ssh://git@github.com/futureversecom/relay-chain", default-features = false, branch = "release/0.0.1-rc0" }
polkadot-primitives = { git = "ssh://git@github.com/futureversecom/relay-chain", default-features = false, branch = "release/0.0.1-rc0" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
	"polkadot-primitives/std",
]
