[package]
name = "cumulus-test-relay-validation-worker-provider"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"

[dependencies]

# Polkadot
polkadot-node-core-pvf = { git = "ssh://git@github.com/futureversecom/relay-chain", branch = "release/0.0.1-rc0" }
